--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Adrian Wersching <dev@awersching.de>"]
 edition = "2018"
 
 [dependencies]
-config = "0.9"
+confy = "0.3.1"
 reqwest = "0.9.5"
 serde = "1.0"
 serde_derive = "1.0"
