--- a/config/currweather.toml
+++ b/config/currweather.toml
@@ -1,6 +1,13 @@
-weather_api_key = 'key'
+weather_api_key = 'your api key'
 
 # in seconds
 interval = 900
 
 city = 'London'
+
+# available tags:
+#   <icon>
+#   <temperature_celsius>
+#   <temperature_fahrenheit>
+#   <temperature_kelvin>
+format = ' <icon> <temperature_celsius>°C '
