--- a/config/wedder.toml
+++ b/config/wedder.toml
@@ -1,9 +1,12 @@
+# available weather providers:
+#   OpenWeatherMap
+weather_provider = 'OpenWeatherMap'
 weather_api_key = 'your api key'
+
+city = 'London'
 
 # in seconds
 interval = 300
-
-city = 'London'
 
 # available tags:
 #   <icon>
@@ -11,3 +14,16 @@ city = 'London'
 #   <temperature_fahrenheit>
 #   <temperature_kelvin>
 format = ' <icon> <temperature_celsius>°C '
+
+# install the weather icons font to display the icons correctly
+[icons]
+ClearSky = ''
+FewClouds = ''
+Clouds = ''
+ManyClouds = ''
+RainSun = ''
+Rain = ''
+HeavyRain = ''
+Thunderstorm = ''
+Snow = ''
+Mist = ''
