--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2018"
 [dependencies]
 confy = "0.3.1"
 reqwest = "0.9.5"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 log4rs = "0.8"
