--- a/example/wedder.toml
+++ b/example/wedder.toml
@@ -1,19 +1,27 @@
-# available weather providers:
-#   OpenWeatherMap
-weather_provider = 'OpenWeatherMap'
-weather_api_key = 'your api key'
-
-city = 'London'
-
-# in seconds
-interval = 300
-
 # available tags:
 #   <icon>
 #   <temperature_celsius>
 #   <temperature_fahrenheit>
 #   <temperature_kelvin>
 format = ' <icon> <temperature_celsius>°C '
+
+# in seconds
+interval = 300
+
+[weather]
+# available providers:
+#   OpenWeatherMap
+provider = 'OpenWeatherMap'
+api_key = 'your api key'
+
+[location]
+# available providers:
+#   Ip
+#   Manual
+provider = 'Ip'
+# if you choose 'Manual' as provider, you can set your coordinates
+# lat = 51.509865
+# lon = -0.118092
 
 # install one of the patched fonts from Nerd Fonts to display the icons:
 # https://github.com/ryanoasis/nerd-fonts#patched-fonts
