--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,12 @@ authors = ["Adrian Wersching <dev@awersching.de>"]
 edition = "2018"
 
 [dependencies]
-confy = "0.3.1"
-reqwest = "0.9.5"
 serde = { version = "1.0", features = ["derive"] }
+
+directories = "1.0.2"
+toml = "0.4.10"
+
+reqwest = "0.9.5"
 serde_json = "1.0"
+
 log = "0.4"
