--- a/example/wedder.toml
+++ b/example/wedder.toml
@@ -32,13 +32,13 @@ provider = 'Ip'
 # https://github.com/ryanoasis/nerd-fonts#patched-fonts
 [icons]
 # the icons displayed here are also the defaults
-ClearSky = ''
-FewClouds = ''
-Clouds = '摒'
-ManyClouds = ''
-RainSun = ''
-Rain = ''
-HeavyRain = '歹'
-Thunderstorm = ''
-Snow = ''
-Mist = ''
+clear_sky = ''
+few_clouds = ''
+clouds = '摒'
+many_clouds = ''
+rain_sun = ''
+rain = ''
+heavy_rain = '歹'
+thunderstorm = ''
+snow = ''
+mist = ''
