--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,15 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.2.14"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde = { version = "1.0.85", features = ["derive"] }
+serde_json = "1.0.36"
 toml = "0.4.10"
 
 strum = "0.13.0"
 strum_macros = "0.13.0"
 
 directories = "1.0.2"
-reqwest = "0.9.5"
+reqwest = "0.9.8"
 
-log = "0.4"
-simplelog = "^0.5.0"
+log = "0.4.6"
+simplelog = "0.5.3"
