Fix some icons having different sizes

--- a/example/wedder.toml
+++ b/example/wedder.toml
@@ -34,11 +34,11 @@ provider = 'Ip'
 # the icons displayed here are also the defaults
 clear_sky = ''
 few_clouds = ''
-clouds = '摒'
+clouds = ''
 many_clouds = ''
 rain_sun = ''
 rain = ''
-heavy_rain = '歹'
+heavy_rain = ''
 thunderstorm = ''
 snow = ''
 mist = ''
