--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,20 @@ authors = ["Adrian Wersching <dev@awersching.de>"]
 edition = "2018"
 
 [dependencies]
-structopt = "0.2.14"
-serde = { version = "1.0.85", features = ["derive"] }
-serde_json = "1.0.36"
-toml = "0.4.10"
+structopt = "0.3.1"
+serde = { version = "1.0.100", features = ["derive"] }
+serde_json = "1.0.40"
+toml = "0.5.3"
 
-strum = "0.13.0"
-strum_macros = "0.13.0"
+strum = "0.15.0"
+strum_macros = "0.15.0"
 
-directories = "1.0.2"
-reqwest = "0.9.8"
-chrono = "0.4.6"
+directories = "2.0.2"
+reqwest = "0.9.20"
+chrono = "0.4.9"
 
-log = "0.4.6"
-log4rs = "0.8.1"
+log = "0.4.8"
+log4rs = "0.8.3"
+
+[dev-dependencies]
+assert_cmd = "0.11.1"
