--- a/examples/wedder.toml
+++ b/examples/wedder.toml
@@ -25,6 +25,7 @@ interval = 300
 [weather]
 # available providers:
 #   OpenWeatherMap
+#   OwmMock (for testing purposes)
 # default: OpenWeatherMap
 provider = 'OpenWeatherMap'
 # enter your API key here
