--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,20 +6,20 @@ authors = ["Adrian Wersching <dev@awersching.de>"]
 edition = "2018"
 
 [dependencies]
-structopt = "0.3.5"
-serde = { version = "1.0.103", features = ["derive"] }
-serde_json = "1.0.44"
-toml = "0.5.5"
+reqwest = { version = "0.10.4", features = ["blocking"] }
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.48"
+toml = "0.5.6"
+structopt = "0.3.11"
 
-strum = "0.16.0"
-strum_macros = "0.16.0"
+strum = "0.18.0"
+strum_macros = "0.18.0"
 
 directories = "2.0.2"
-reqwest = "0.9.22"
-chrono = "0.4.10"
+chrono = "0.4.11"
 
 log = "0.4.8"
-log4rs = "0.9.0"
+log4rs = "0.11.0"
 
 [dev-dependencies]
 assert_cmd = "0.12.0"
