Add <temperature_feels_like> tag (#5)

--- a/examples/wedder.toml
+++ b/examples/wedder.toml
@@ -1,6 +1,7 @@
 # available tags:
 #   <icon>
 #   <temperature>
+#   <temperature_feels_like>
 #   <temperature_max>
 #   <temperature_min>
 #   <pressure>
