Rework weather interface

--- a/examples/wedder.toml
+++ b/examples/wedder.toml
@@ -9,6 +9,8 @@
 #   <humidity>
 #   <wind_speed>
 #   <cloud_percentage>
+#   <visibility>
+#   <precipitation>
 #   <sunrise>
 #   <sunset>
 # default: '<icon> <temperature>°C'
