--- a/examples/wedder.toml
+++ b/examples/wedder.toml
@@ -1,18 +1,22 @@
 # available tags:
 #   <city>
 #   <icon>
-#   <temperature>
-#   <temperature_feels_like>
-#   <temperature_max>
-#   <temperature_min>
-#   <pressure>
-#   <humidity>
-#   <wind_speed>
-#   <cloud_percentage>
-#   <visibility>
-#   <precipitation>
-#   <sunrise>
-#   <sunset>
+#   <temperature>                   Celsius/Fahrenheit/Kelvin
+#   <temperature_feels_like>        Celsius/Fahrenheit/Kelvin
+#   <temperature_max>               Celsius/Fahrenheit/Kelvin
+#   <temperature_min>               Celsius/Fahrenheit/Kelvin
+#   <dew_point>                     Celsius/Fahrenheit/Kelvin
+#   <precipitation>                 Millimeter/Inch
+#   <precipitation_chance>          Percentage
+#   <clouds>                        Percentage
+#   <humidity>                      Percentage
+#   <visibility>                    Meter/Kilometer/Mile
+#   <wind_speed>                    Ms/Kmh/Mph
+#   <pressure>                      Hpa
+#   <uv_index>                      Integer
+#   <air_quality_index>             Integer
+#   <sunrise>                       H:M
+#   <sunset>                        H:M
 # default: '<icon> <temperature>°C'
 format = '<icon> <temperature>°C'
 # in seconds
@@ -70,9 +74,8 @@ clear_sky = ''
 few_clouds = ''
 clouds = ''
 many_clouds = ''
-rain_sun = ''
 rain = ''
 heavy_rain = ''
-thunderstorm = ''
+thunderstorm = ''
 snow = ''
 mist = ''
