--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: Release
 
 env:
+  PROJECT_NAME: wedder
   TARGET: x86_64-unknown-linux-gnu
   RUST_BACKTRACE: 1
 
@@ -14,7 +15,6 @@ jobs:
     name: Build executable
     runs-on: ubuntu-20.04
     steps:
-      - run: echo ::set-env name=PROJECT_NAME::${{ github.event.repository.name }}
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
@@ -24,4 +24,4 @@ jobs:
       - run: make release
       - uses: softprops/action-gh-release@v1
         with:
-          files: $PROJECT_NAME-$TRAVIS_TAG-$TARGET
+          files: $PROJECT_NAME-$GITHUB_REF_NAME-$TARGET
