--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ on:
       - '*'
 
 jobs:
-  build:
-    name: Build executable
+  release:
+    name: Build executable and upload to releases page
     runs-on: ubuntu-20.04
     steps:
       - uses: actions-rs/toolchain@v1
